copy and z-index fix

--- a/src/css/graphic/note.styl
+++ b/src/css/graphic/note.styl
@@ -7,6 +7,7 @@
 	transition $ease
 	height 12em
 	min-height 100%
+	z-index 100
 	
 	+mq('bp-2')
 		position absolute
